# docs/swagger.json
@@ -102,7 +102,7 @@
                 }
             }
         },
-        "/refresh-token": {
+        "/refresh": {
             "post": {
                 "description": "Проверяет валидность access и refresh токенов, их соответствие, отсутствие в черном списке. Выдает новую пару токенов, добавляет старые в черный список и обновляет данные пользователя.\nRefresh token читается из cookie \"Cookie:refreshToken=\"",
                 "consumes": [
@@ -156,7 +156,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "JWT": []
                     }
                 ],
                 "description": "Возвращает GUID пользователя из JWT токена",
